[metadata]
name = racg
version = 0.1.0
description = Tools for working with right-angled Coxeter groups
author = Christopher H. Cashen
author_email = christopher.cashen@tuwien.ac.at
license = MIT
license_files = LICENSE

[options]
py_modules = racg
install_requires =
    networkx
    numpy
python_requires = >=3.8
